# ChangeLog for x11-misc/treeline
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.62 2014/07/13 12:41:54 jer Exp $

  13 Jul 2014; Jeroen Roovers <jer@gentoo.org> -treeline-1.4.1.ebuild,
  files/treeline-1.2.3-nocompile.patch:
  Clean up patch.

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1-r1.ebuild:
  Stable for ppc, wrt bug #510170

  16 Jun 2014; Chema Alonso <nimiux@gentoo.org> treeline-1.4.1-r1.ebuild:
  Stable for amd64 wrt bug #510170

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  treeline-1.4.1-r1.ebuild:
  x86 stable wrt bug #510170

*treeline-1.9.4 (18 May 2014)

  18 May 2014; Jeroen Roovers <jer@gentoo.org> +treeline-1.9.4.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> treeline-1.4.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*treeline-1.4.1-r1 (22 Jul 2013)

  22 Jul 2013; Jeroen Roovers <jer@gentoo.org> +treeline-1.4.1-r1.ebuild:
  Migrate to python-*-r1.eclass.

  22 Jul 2013; Jeroen Roovers <jer@gentoo.org> -treeline-1.4.0.ebuild:
  Old.

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1.ebuild:
  Stable for ppc, wrt bug #461386

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1.ebuild:
  Stable for x86, wrt bug #461386

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1.ebuild:
  Stable for amd64, wrt bug #461386

*treeline-1.4.1 (04 Jun 2012)

  04 Jun 2012; Michael Weber <xmw@gentoo.org> +treeline-1.4.1.ebuild:
  Version bump (reported by df, bug 416011)

  01 May 2012; Jeroen Roovers <jer@gentoo.org>
  +files/treeline-1.2.3-nocompile.patch:
  Put back the patch by Tommy Pettersson (bug #413985).

  24 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/treeline-1.2.3-nocompile.patch, -treeline-1.2.3.ebuild,
  -treeline-1.2.4.ebuild, treeline-1.4.0.ebuild:
  Remove all overshadowed ebuilds. Pick only aspell dict as ispell is going out.
