@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/treeline
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.62 2014/07/13 12:41:54 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.63 2014/08/10 20:04:08 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> treeline-1.4.1-r1.ebuild,
+  treeline-1.9.4.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
   13 Jul 2014; Jeroen Roovers <jer@gentoo.org> -treeline-1.4.1.ebuild,
   files/treeline-1.2.3-nocompile.patch:
